# drake

./: .gitignore  MODULE.bazel  calc_error.asv  calc_error.m  data.txt  do_all.asv  do_all.m  doall.m  extruded_sphere.vtk  jump.txt  load_ball_data.m  load_data.m  load_speculative_contact_surface.m  log_energy_target.asv  log_energy_target.m  object_scaling_custom_benchmark.sh  object_scaling_custom_benchmark_cpu.sh  object_scaling_custom_benchmark_gpu.sh  object_scaling_html.sh  out.txt  output_divergence.txt  output_no_divergence.txt  plate_and_spatula.sdf  plot.py  plot_all.sh  plot_integrator_data.asv  plot_integrator_data.m  run.sh  run_experiments.py  scatter.txt  spatula_benchmark.sh  sphere_collision.vtk  spinning_coin_output
examples/clutter/: BUILD.bazel  clutter_teleop_sim.py  sim_directives.dmd.yaml
examples/clutter/models/: cylinder.obj.mtl  cylinder.sdf  paddle.obj.mtl  paddle.sdf  table.sdf
examples/hydroelastic/spatula_slip_control/: BUILD.bazel  export_hydroelastic_meshes_to_vtk.cc  spatula_slip_control.cc
examples/hydroelastic/two_spheres/: BUILD.bazel  cases.txt  extended_pepper.txt  extended_pepper2.txt  extended_pepper4.txt  extended_pepper6.txt  floor.sdf  pepper.ply  pepper.sdf  pepper.vtk  pepper2.mtl  pepper2.vtk  pepper4.ply  pepper4.vtk  pepper6.vtk  pepper_field.vtk  pepper_small.ply  pepper_small.vtk  run_all.sh  two_spheres_run_dynamics.cc
examples/hydroelastic/two_spheres/data/: body_fitted.txt  body_fitted2.txt  body_fitted4.txt  body_fitted6.txt  body_fitted8.txt  body_fitted_extended.txt  body_fitted_extended2.txt  body_fitted_extended4.txt  body_fitted_extended6.txt  body_fitted_extended8.txt  embedded15.txt  embedded19.txt  embedded25.txt  embedded5.txt  embedded9.txt  plot.py
examples/hydroelastic/two_spheres/data_1dof_SAP/: body_fitted.txt  body_fitted2.txt  body_fitted4.txt  body_fitted6.txt  body_fitted8.txt  body_fitted_extended.txt  body_fitted_extended2.txt  body_fitted_extended4.txt  body_fitted_extended6.txt  body_fitted_extended8.txt  embedded15.txt  embedded19.txt  embedded25.txt  embedded5.txt  embedded9.txt  plot.py
examples/hydroelastic/two_spheres/data_1dor_TAMSI/: body_fitted.txt  body_fitted2.txt  body_fitted4.txt  body_fitted6.txt  body_fitted8.txt  body_fitted_extended.txt  body_fitted_extended2.txt  body_fitted_extended4.txt  body_fitted_extended6.txt  body_fitted_extended8.txt  embedded15.txt  embedded19.txt  embedded25.txt  embedded5.txt  embedded9.txt
examples/hydroelastic/two_spheres/data_free_body_SAP/: body_fitted.txt  body_fitted2.txt  body_fitted4.txt  body_fitted_extended6.txt  body_fitted_extended8.txt  embedded15.txt  embedded19.txt  embedded5.txt  embedded9.txt  plot.py
examples/integrators/: BUILD.bazel  ball_on_table.cc  ball_on_table.xml  clutter.xml  cone.mtl  cone1.mtl  cone2.mtl  cones.sdf  error_control_demo.py  plate_and_spatula.sdf  teddy_and_torus.sdf
examples/multibody/BarrettHand/: BUILD.bazel  gears_example.cc
examples/multibody/BarrettHand/models/: BarrettFinger.xacro  BarrettHand.sdf  BarrettHand.sdf.xacro  MotorAssembly.sdf  motor_gear.vtk  nut_gear.mtl  nut_gear.vtk  obstacles.sdf  screw.mtl  screw.vtk  spur.mtl  spur.vtk  worm.mtl  worm.vtk
examples/multibody/arch/: BUILD.bazel  arch.cc  arch_with_gap_01.vtk  arch_with_gap_02.vtk  arch_with_gap_03.vtk  arch_with_gap_04.vtk  arch_with_gap_05.vtk  arch_with_gap_06.vtk  arch_with_gap_07.vtk  arch_with_gap_08.vtk  arch_with_gap_09.vtk  arch_with_gap_10.vtk  arch_with_gap_11.vtk  arch_with_gap_12.vtk  arch_with_gap_13.vtk  arch_with_gap_14.vtk  arch_with_gap_15.vtk  arch_with_gap_16.vtk  arch_with_gap_17.vtk  arch_with_gap_18.vtk  arch_with_gap_19.vtk  arch_with_gap_20.vtk  arch_with_gap_21.vtk  arch_with_gap_22.vtk  arch_with_gap_23.vtk  arch_with_gap_24.vtk  arch_with_gap_25.vtk  arch_without_gap_01.vtk  arch_without_gap_02.vtk  arch_without_gap_03.vtk  arch_without_gap_04.vtk  arch_without_gap_05.vtk  arch_without_gap_06.vtk  arch_without_gap_07.vtk  arch_without_gap_08.vtk  arch_without_gap_09.vtk  arch_without_gap_10.vtk  arch_without_gap_11.vtk  arch_without_gap_12.vtk  arch_without_gap_13.vtk  (+12 more)
examples/multibody/cylinder_press/: BUILD.bazel  cylinder.vtk  cylinder_press.cc
examples/multibody/peppers/: BUILD.bazel  peppers.cc
examples/multibody/rings/: BUILD.bazel  ring.vtk  rings.cc  torus.vtk
examples/multibody/spinning_coin/: BUILD.bazel  spinning_coin.cc
examples/multibody/spinning_coin/models/: coin.mtl  coin.sdf  coin_128.sdf  coin_16.sdf  coin_32.sdf  coin_4.sdf  coin_64.sdf  coin_8.sdf  floor.sdf
examples/multibody/teddy/: BUILD.bazel  bubble.vtk  teddy.cc  teddy.vtk
examples/multibody/teddy/models/: schunk_wsg_50.sdf
examples/sycl/: BUILD.bazel  main.cc  mesh_test.cc  simple.cc  simple.h  simple_mesh.cc  simple_mesh.h
examples/sycl/simple_mesh_example/: BUILD.bazel  README.md  mesh_benchmark.cc  mesh_test.cc  simple_mesh.cc  simple_mesh.h
examples/sycl/sycl_mesh_example/: BUILD.bazel  sycl_mesh_benchmark_device.cc
examples/sycl/vector_add_example/: BUILD.bazel  README.md
examples/sycl/volume_mesh_example/: volume_mesh_test.cc
geometry/proximity/sycl/: BUILD.bazel  sycl_hydroelastic_surface.cc  sycl_hydroelastic_surface.h  sycl_proximity_engine.cc  sycl_proximity_engine.h
geometry/proximity/sycl/test/: sycl_proximity_engine_test.cc
geometry/proximity/sycl/utils/: sycl_contact_polygon.h  sycl_equilibrium_plane.h  sycl_hydroelastic_surface_creator.h  sycl_memory_manager.h  (+3 more)
stubdev/: BUILD.bazel  README.md  cuda_cholesky.cu  cuda_cholesky.cuh  cuda_cholesky.h  cuda_cholesky_test.cc  cuda_eigen_debug.cu  cuda_eigen_debug.cuh  cuda_eigen_debug.h  cuda_eigen_debug_test.cc  cuda_gauss_jordan.cu  cuda_gauss_jordan.h  cuda_gauss_jordan_test.cc  cuda_gpu_collision.cu  cuda_gpu_collision.cuh  cuda_gpu_collision.h  cuda_gpu_collision_test.cc  cuda_sap_cpu_wrapper.cc  cuda_sap_cpu_wrapper.h  cuda_sap_qp.cu  cuda_sap_qp.cuh  cuda_sap_qp_test.cc  cuda_sap_solver.cu  cuda_sap_solver.cuh  cuda_sap_solver_test.cc  cuda_sap_test.cc
tools/workspace/cholmod/: BUILD.bazel  package.BUILD.bazel  repository.bzl
(+654 files in other folders)
