# -*- mode: python -*-
# vi: set ft=python :

load(
    "//tools/skylark:cuda.bzl",
    "nvcc_library",
)

load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_binary",
    "drake_cc_package_library",
)

drake_cc_package_library(
    name = "stubdev",
    visibility = ["//visibility:public"],
    deps = [
        ":cuda_sap_cpu_wrapper",
    ],
)

nvcc_library(
    name = "cuda_cholesky",
    hdrs = ["cuda_cholesky.h", "cuda_cholesky.cuh"],
    srcs = ["cuda_cholesky.cu"],
    deps = [
        "//common:essential",
    ],
)

nvcc_library(
    name = "cuda_eigen_debug",
    hdrs = ["cuda_eigen_debug.h", "cuda_eigen_debug.cuh"],
    srcs = ["cuda_eigen_debug.cu"],
    deps = [
        "//common:essential",
    ],
)

nvcc_library(
    name = "cuda_gpu_collision",
    hdrs = ["cuda_gpu_collision.cuh"],
    srcs = ["cuda_gpu_collision.cu"],
    deps = [
        "//common:essential",
    ],
)

nvcc_library(
    name = "cuda_sap_solver",
    hdrs = ["cuda_sap_solver.h", "cuda_cholesky.h","cuda_sap_solver.cuh", "cuda_cholesky.cuh", "cuda_gpu_collision.cuh"],
    srcs = ["cuda_sap_solver.cu"],
    deps = [
        "//common:essential",
        ":cuda_cholesky",
        ":cuda_gpu_collision",
    ],
)

nvcc_library(
    name = "cuda_sap_qp",
    hdrs = ["cuda_sap_qp.h", "cuda_cholesky.h","cuda_sap_qp.cuh", "cuda_cholesky.cuh"],
    srcs = ["cuda_sap_qp.cu"],
    deps = [
        "//common:essential",
        ":cuda_cholesky",
    ],
)



drake_cc_library(
    name = "cuda_sap_cpu_wrapper",
    hdrs = ["cuda_sap_cpu_wrapper.h",  "cuda_gpu_collision.cuh","cuda_sap_solver.cuh","cuda_sap_solver.h"],
    srcs = ["cuda_sap_cpu_wrapper.cc"],
    deps = [
        ":cuda_gpu_collision",
        ":cuda_sap_solver",
        ":cuda_cholesky",
    ],
    visibility = ["//visibility:public"],
    declare_installed_headers = True,
)

drake_cc_googletest(
    name = "cuda_cholesky_test",
    srcs = ["cuda_cholesky_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
        ":cuda_cholesky",
        "@gtest//:main",
    ],
)

drake_cc_googletest(
    name = "cuda_gpu_collision_test",
    srcs = ["cuda_gpu_collision_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
        ":cuda_gpu_collision",
        "@gtest//:main",
    ],
)


drake_cc_googletest(
    name = "cuda_sap_solver_test",
    srcs = ["cuda_sap_solver_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
    ":cuda_sap_solver",
    ":cuda_cholesky",
    "@gtest//:main",
    "@cuda//:cudart",
    ],
)


drake_cc_googletest(
    name = "cuda_eigen_debug_test",
    srcs = ["cuda_eigen_debug_test.cc"],
    tags = ["cuda"],
    deps = [
	"//common:essential",
        ":cuda_eigen_debug",
        "@gtest//:main",
    ],
)


drake_cc_googletest(
    name = "cuda_sap_test",
    srcs = ["cuda_sap_test.cc"],
     tags = ["cuda"],
    deps = [
        "//common:essential",
        ":cuda_sap_cpu_wrapper",
        "@gtest//:main",
        "@cuda//:cudart",
    ],
    visibility = ["//visibility:public"]
)

drake_cc_googletest(
    name = "cuda_sap_qp_test",
    srcs = ["cuda_sap_qp_test.cc"],
     tags = ["cuda"],
    deps = [
        "//common:essential",
        ":cuda_sap_qp",
        "@gtest//:main",
        "@cuda//:cudart",
    ],
    visibility = ["//visibility:public"]
)







