load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:drake_cc.bzl", "drake_cc_binary")
load("//tools/skylark:drake_data.bzl", "models_filegroup")

package(default_visibility = ["//visibility:private"])

models_filegroup(
    name = "glob_models",
    glob_exclude = ["images/**/*"],
)

filegroup(
    name = "models",
    srcs = [
        ":glob_models",
    ],
    visibility = [
        "//:__pkg__",
        "//bindings/pydrake/visualization:__pkg__",
    ],
)

drake_cc_binary(
    name = "spatula_slip_control",
    srcs = ["spatula_slip_control.cc"],
    add_test_rule = True,
    data = [
        ":models",
        "@drake_models//:wsg_50_description",
    ],
    test_rule_args = [
        "--simulation_sec=0.1",
        "--realtime_rate=0.0",
    ],
    deps = [
        "//geometry/render:render_engine",
        "//multibody/parsing",
        "//multibody/plant:multibody_plant_config_functions",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_config_functions",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_buses",
        "//systems/lcm:lcm_config_functions",
        "//systems/primitives",
        "//systems/sensors:camera_config",
        "//systems/sensors:camera_config_functions",
        "//systems/sensors:image_writer",
        "//visualization",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "export_hydroelastic_meshes_to_vtk",
    srcs = ["export_hydroelastic_meshes_to_vtk.cc"],
    data = [
        ":models",
        "@drake_models//:wsg_50_description",
    ],
    deps = [
        "//common:default_scalars",
        "//geometry/proximity:mesh_to_vtk",
        "//geometry/proximity:volume_to_surface_mesh",
        "//geometry:scene_graph_inspector",
        "//multibody/parsing",
        "//multibody/plant:multibody_plant_config_functions",
        "//systems/analysis:simulator",
        "//systems/framework",
        "@gflags",
    ],
)

add_lint_tests(enable_clang_format_lint = False)
