# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "two_spheres_run_dynamics",
    srcs = ["two_spheres_run_dynamics.cc"],
    data = [
        ":sphere_files",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/parsing:parser",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

filegroup(
    name = "sphere_files",
    srcs = glob([
        "**/*.vtk",
        "**/*.sdf",
        "**/*.obj",
        "**/*.mtl",
        "**/*.png",
    ]),
)

add_lint_tests()
