load("//tools/install:install_data.bzl", "install_data")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/workspace/ros_xacro_internal:defs.bzl", "xacro_filegroup")

package(default_visibility = ["//visibility:private"])

install_data(
    name = "install_data",
    data = [
        ":models",
        ":BarrettHandModels"
    ],
    visibility = ["//visibility:public"],
)

xacro_filegroup(
    name = "BarrettHandModels",
    srcs = [
        "models/BarrettHand.sdf.xacro",
    ],
    data = [
        "models/BarrettFinger.xacro",
    ],
    visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "models",
    srcs = glob([
        "**/*.sdf",
        "**/*.obj",
        "**/*.mtl",
        "**/*.vtk",
        "**/*.gltf",
        "**/*.glb"
    ]),
    visibility = [
        "//visibility:public",
    ],
)

drake_cc_binary(
    name = "gears_example",
    srcs = ["gears_example.cc"],
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//multibody/parsing:parser",
        "//systems/framework:diagram_builder",
        "//systems/analysis:simulator",
        "//systems/primitives:trajectory_source",
        "//common/trajectories:piecewise_polynomial",
        "//geometry:meshcat_visualizer",
        "//geometry:meshcat",
        "//multibody/meshcat:contact_visualizer",
        "//multibody/plant:multibody_plant_config_functions",
        "//visualization:visualization_config_functions",
        "@gflags//:gflags",
    ],
)
