# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "arch",
    srcs = [
        "arch.cc",
    ],
    data = [
	    "arch_without_gap_01.vtk",
	    "arch_without_gap_02.vtk",
	    "arch_without_gap_03.vtk",
	    "arch_without_gap_04.vtk",
	    "arch_without_gap_05.vtk",
	    "arch_without_gap_06.vtk",
	    "arch_without_gap_07.vtk",
	    "arch_without_gap_08.vtk",
	    "arch_without_gap_09.vtk",
	    "arch_without_gap_10.vtk",
	    "arch_without_gap_11.vtk",
	    "arch_without_gap_12.vtk",
	    "arch_without_gap_13.vtk",
	    "arch_without_gap_14.vtk",
	    "arch_without_gap_15.vtk",
	    "arch_without_gap_16.vtk",
	    "arch_without_gap_17.vtk",
	    "arch_without_gap_18.vtk",
	    "arch_without_gap_19.vtk",
	    "arch_without_gap_20.vtk",
	    "arch_without_gap_21.vtk",
	    "arch_without_gap_22.vtk",
	    "arch_without_gap_23.vtk",
	    "arch_without_gap_24.vtk",
	    "arch_without_gap_25.vtk",
	    "arch_with_gap_01.vtk",
	    "arch_with_gap_02.vtk",
	    "arch_with_gap_03.vtk",
	    "arch_with_gap_04.vtk",
	    "arch_with_gap_05.vtk",
	    "arch_with_gap_06.vtk",
	    "arch_with_gap_07.vtk",
	    "arch_with_gap_08.vtk",
	    "arch_with_gap_09.vtk",
	    "arch_with_gap_10.vtk",
	    "arch_with_gap_11.vtk",
	    "arch_with_gap_12.vtk",
	    "arch_with_gap_13.vtk",
	    "arch_with_gap_14.vtk",
	    "arch_with_gap_15.vtk",
	    "arch_with_gap_16.vtk",
	    "arch_with_gap_17.vtk",
	    "arch_with_gap_18.vtk",
	    "arch_with_gap_19.vtk",
	    "arch_with_gap_20.vtk",
	    "arch_with_gap_21.vtk",
	    "arch_with_gap_22.vtk",
	    "arch_with_gap_23.vtk",
	    "arch_with_gap_24.vtk",
	    "arch_with_gap_25.vtk",
    ],
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry",
        "//geometry/proximity",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

add_lint_tests()
