# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "cylinder_press",
    srcs = [
        "cylinder_press.cc",
    ],
    data = [
        "cylinder.vtk",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/primitives:vector_log_sink",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

add_lint_tests()
