# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

filegroup(
    name = "models",
    srcs = [
        "@drake_models//:veggies/bell_pepper_no_stem_color.png",
        "@drake_models//:veggies/bell_pepper_no_stem_normal.png",
        "@drake_models//:veggies/bell_pepper_no_stem_occlusion_roughness_metallic.png",  # noqa
        "@drake_models//:veggies/yellow_bell_pepper_no_stem_low.mtl",
        "@drake_models//:veggies/yellow_bell_pepper_no_stem_low.obj",
        "@drake_models//:veggies/yellow_bell_pepper_no_stem_low.vtk",
    ],
    visibility = ["//:__pkg__"],
)


drake_cc_binary(
    name = "peppers",
    srcs = [
        "peppers.cc",
    ],    
    data = [
        ":models",
    ],
    copts = ["-Wno-error=deprecated-declarations","-Wno-deprecated-declarations","-Wno-error=unused-variable"],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:profiler",
        "//geometry:meshcat_visualizer",
        "//multibody/meshcat:contact_visualizer",
        "//multibody/parsing",
        "//geometry:drake_visualizer",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/contact_solvers/sap:sap_solver",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

add_lint_tests()
