# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "rings",
    srcs = [
        "rings.cc",
    ],
    tags = [
        "cpu:8",
    ],
    data = [
	    "ring.vtk",
	    "ring.obj",
	    "torus.vtk",
	    "torus.obj",
    ],
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry",
        "//geometry/proximity",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

add_lint_tests()
