# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "spinning_coin",
    srcs = [
        "spinning_coin.cc",
    ],
    data = [
        ":models",
    ],
    deps = [
        "//geometry:scene_graph",
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//systems/lcm",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/framework",
        "@gflags",
    ],
)

install_data()

add_lint_tests()
