# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/install:install_data.bzl", "install_data")
load("@drake//tools/workspace:forward_files.bzl", "forward_files")
load(
    "//tools/workspace/models_internal:files.bzl",
    "wsg_50_hydro_bubble_mesh_files",
)

_WSG_50_HYDRO_BUBBLE_MESHES = forward_files(
    srcs = ["@models_internal//:" +
            x for x in wsg_50_hydro_bubble_mesh_files()],
    dest_prefix = "",
    strip_prefix = "@models_internal//:wsg_50_hydro_bubble/",
    visibility = ["//visibility:private"],
)

install_data(
    extra_prod_models = _WSG_50_HYDRO_BUBBLE_MESHES,
)

drake_cc_binary(
    name = "teddy",
    data = [
        ":models",
        "teddy.vtk",
        "bubble.vtk",
        "//manipulation/models/wsg_50_description:models",
    ],
    srcs = [
        "teddy.cc",
    ],
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives",
        "@gflags",
    ],
)

add_lint_tests()
